# nemorosa

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  zensical.toml
.github/: dependabot.yml  renovate.json
.github/workflows/: build-alpha.yml  lint.yml  release.yml  test.yml
docs/: announce-matching.md  configuration.md  getting-started.md  http-api.md  index.md  managing-the-daemon.md  triggering-searches.md
src/nemorosa/: __init__.py  api.py  cli.py  client_instance.py  config.py  core.py  db.py  filecompare.py  filelinking.py  logger.py  notifier.py  scheduler.py  webserver.py
src/nemorosa/clients/: __init__.py  client_common.py  deluge.py  qbittorrent.py  registry.py  rtorrent.py  scgitransport.py  transmission.py
src/nemorosa/core/: __init__.py  injector.py  models.py  processor.py  registry.py  searcher.py  utils.py
src/nemorosa/trackers/: __init__.py  api_common.py  gazelle_games.py  gazelle_html.py  gazelle_json.py  jpopsuki.py  registry.py
tests/: __init__.py  conftest.py  test_api.py  test_scheduler.py  test_webserver.py
tests/core/: conftest.py  test_injector.py  test_processor.py  test_searcher.py  test_utils.py
