[build-system]
requires = ["uv_build>=0.9.1,<0.11.0"]
build-backend = "uv_build"

[project]
name = "nemorosa"
version = "0.4.3"
description = "A specialized cross-seeding tool designed for music torrents, featuring automatic file mapping, partial matching, and seamless torrent injection"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "KyokoMiki" }]
keywords = ["torrent", "cross-seed"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.11"
dependencies = [
    "aiohttp[speedups]>=3.13.2",
    "aiolimiter>=1.1.0",
    "anyio>=4.12.1",
    "apprise>=1.9.6",
    "apscheduler>=3.10.4",
    "asyncer==0.0.17",
    "beautifulsoup4[lxml]>=4.13.5",
    "defusedxml>=0.7.1",
    "deluge-client>=1.10.2",
    "fastapi>=0.122.0",
    "humanfriendly>=10.0",
    "msgspec[yaml]>=0.20.0",
    "platformdirs>=4.4.0",
    "qbittorrent-api>=2025.7.0",
    "reflink-copy>=0.3.2",
    "sqlalchemy[aiosqlite]>=2.0.44",
    "tenacity>=9.1.2",
    "torf>=4.3.0",
    "transmission-rpc>=7.0.11",
    "uvicorn[standard]>=0.35.0",
    "uvloop>=0.19.0; sys_platform != 'win32'",
    "winloop>=0.1.0; sys_platform == 'win32'",
]

[project.urls]
Documentation = "https://github.com/KyokoMiki/nemorosa/wiki"
Homepage = "https://github.com/KyokoMiki/nemorosa"
Repository = "https://github.com/KyokoMiki/nemorosa"
Issues = "https://github.com/KyokoMiki/nemorosa/issues"

[project.scripts]
nemorosa = "nemorosa:main"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "ruff>=0.11.2",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flake8-type-checking
    "TC",
    # McCabe complexity
    "C90",
]

[tool.pyright]
include = ["src"]
typeCheckingMode = "standard"
reportPossiblyUnboundVariable = "error"
reportUnreachable = "error"
reportInvalidCast = "error"
reportUnsafeMultipleInheritance = "error"
reportImplicitAbstractClass = "error"
reportInvalidAbstractMethod = "error"
